# puyu-learn

./: README.md  lesson2.md
lesson1/: OpenLabModule.xmind  大模型.xmind
trainmodel/: infer_models.py  infer_trt.py  test_bistro.py  test_datatypes.py  train.py
trainmodel/conf/: nppdTest.json  train.json
trainmodel/core/: common.py  util.py
trainmodel/core/loader/: AugmentData.py  TestDataLoader.py  TrainDataLoader.py  dataloader_torch.py  misc.py  video_sampler.py
trainmodel/core/loss/: hypersim_loader.py  loss.py  process_hypersim.py  ssim.py  vgg.py
trainmodel/core/networks/: convunet.py  modelMe.py  modelSF.py  modelnet.py  modelt.py  partitioning_pyramid.py
trainmodel/core/networks/NPSF/: modelSF.py
trainmodel/core/networks/SSR/: modelSSR.py  temporal_attention.py  unet_transformer.py
trainmodel/samples/: CMakeLists.txt  dataloader.cpp  dataloader.h  demo.cpp  inferCore.cpp  inferCore.h  onnx2trt.cpp  sample_onnx_mnist.sln  sample_onnx_mnist.vcxproj
trainmodel/scripts/: test_analyse.py  train_QAT.py  transfer2onnx.py  transfer2onnx_v2.py  transfer2simonnx.py  transfer2trt.py
trainmodel/test/: compare.txt  torch_profiler.py
trainmodel/utils/: profile_tool.py  trt_utils.py
